--- a/myNewPizza-war/src/java/messages.properties
+++ b/myNewPizza-war/src/java/messages.properties
@@ -59,3 +59,7 @@ myac = MEIN KONTO
 thx = VIELEN DANK
 zrre = ZUR RECHNUNG
 dfbs = Danke f\u00fcr Ihre Bestellung!
+admns = Administration
+verma = VERMERKE ANZEIGEN
+passae = PASSW\u00d6RTER VERWALTEN
+verme = VERMERKE EDITIEREN
