--- a/myNewPizza-war/src/java/messages_en.properties
+++ b/myNewPizza-war/src/java/messages_en.properties
@@ -56,6 +56,11 @@ crea = Created:
 idle = Inactive since:
 admn = ADMINISTRATION
 myac = MY ACCOUNT
+myac2 = My Account
 thx = THANK YOU VERY MUCH
 zrre = TO THE INVOICE
 dfbs = Thank you for your order!
+admns = Administration
+verma = SHOW NOTES
+passae = ADMINISTER PASSWORDS
+verme = EDIT NOTES
