--- a/myNewPizza-war/src/java/messages.properties
+++ b/myNewPizza-war/src/java/messages.properties
@@ -1,7 +1,7 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-servus=Willkommen in der Pizzeria Mario
+servus=WILLKOMMEN IN DER PIZZERIA MARIO
 adm = ADMINISTRATION
 mac = MEIN ACCOUNT
 lin = EINLOGGEN
@@ -11,8 +11,8 @@ usk = Unsere Speisekarte
 num = Nr
 nam = Name
 prs = Preis
-lde = DEUTSCH
-len = ENGLISCH
+lde =  \ \ IN ENGLISH PLEASE!\ \ 
+
 ben = Benutzername:
 pw = Passwort:
 sex=Geschlecht:
@@ -63,3 +63,4 @@ admns = Administration
 verma = VERMERKE ANZEIGEN
 passae = PASSW\u00d6RTER VERWALTEN
 verme = VERMERKE EDITIEREN
+iad = Ihre Adresse:
