--- a/myNewPizza-war/src/java/messages_en.properties
+++ b/myNewPizza-war/src/java/messages_en.properties
@@ -1,7 +1,7 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-servus=Welcome at Pizzeria Mario!
+servus=WELCOME TO PIZZERIA MARIO
 adm = ADMINISTRATION
 mac = MY ACCOUNT
 lin = LOGIN
@@ -11,8 +11,8 @@ usk = Our Menu
 num = No
 nam = Name
 prs = Price
-lde = GERMAN
-len = ENGLISH
+lde = BITTE AUF DEUTSCH!
+
 ben = User Name:
 pw = Password:
 sex = Gender:
@@ -64,3 +64,4 @@ admns = Administration
 verma = SHOW NOTES
 passae = ADMINISTER PASSWORDS
 verme = EDIT NOTES
+iad = your address
